Sat Dec  9 19:13:52 UTC 2006  Olli Savia  <ops@iki.fi>

        * ace/config-vxworks5.x.h:
          Added ACE_LACKS_VSNPRINTF.

Fri Dec  8 20:20:09 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.cpp (parse_args_i):

          Moving the "default:" label outside the block that handles the
          "case 's':". Even though it should work correctly on allmost any
          compiler, things like this are bad form. Thanks to Aaron
          Scamehorn <Aaron dot Scamehorn at cogcap dot com> for noticing.

Fri Dec  8 20:15:40 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * THANKS: Add Ray Lischner.

Fri Dec  8 16:39:51 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/Null_Mutex.h: Added ACE_Export to the class declarations.
          Although they are probably inlined, VS .NET 2005 (VC8) complains
          in some cases when a dll-interface class inherits from a
          non-dll-interface class.

Fri Dec  8 15:36:23 UTC 2006  Ciju John  <johnc@ociweb.com>

        * tests/run_test.lst:
          Bug_2659_Regression_Test cannot run in a single threaded build.

Fri Dec  8 05:21:38 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:

          Changed code to extract version number from ace/Version.h to be
          more resilient to leading whitespace like was added by a bug in
          the release script in the last beta.  Thanks to Ray Lischner
          <rlischner at proteus-technologies dot com> for this patch.

Thu Dec  7 14:13:43 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/DLL_Manager.cpp:
          Made error message dependent on ACE::debug. Thanks to David Faure
          <dfaure at klaralvdalens-datakonsult dot se> for reporting this.

Thu Dec  7 14:09:43 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          Added RTCMM test

Thu Dec  7 12:47:43 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Read_Buffer.h: