@@ -1,2 +1,2 @@
 includes = $TAO_ROOT/MPC/config, $CIAO_ROOT/MPC/config
-
+dynamic_types = $ACE_ROOT/bin/MakeProjectCreator
